[package]
name = "warp_dre"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE.md"
description = "Rust package to interact with Warp DRE nodes"
repository = "https://github.com/archivetheweb/warp_dre"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.152"
reqwest = { version = "0.11.13", features = ["json"] }
anyhow = "1.0.68"
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.91"
serde = "1.0.152"
derive_builder = "0.12.0"
arloader = "0.1.63"
thiserror = "1.0.38"

[dev-dependencies]
tokio-test = "0.4.2"
